k8s/apps/strapi/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
  labels:
    app: strapi
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: strapi
          image: vshadbolt/strapi:5.56.0-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 1337
          volumeMounts:
            - name: strapi-data
              mountPath: /srv/app
      volumes:
        - name: strapi-data
          persistentVolumeClaim:
            claimName: strapi-data
---
apiVersion: v1
kind: Service
metadata:
  name: strapi
  labels:
    app: strapi
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 1337
  selector:
    app: strapi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: strapi
spec:
  rules:
    - host: strapi.home-server.antoine-campbell.com
      http:
        paths:
          - backend:
              service:
                name: strapi
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - secretName: home-server-wildcard-signed-prod
